test: 비용 Fixture 분리